--- a/views/board/view/player.pug
+++ b/views/board/view/player.pug
@@ -76,20 +76,48 @@ block content
             article.items
                 h3 Items
                 //- List of Items
+                a(class="")
                 div(class="card")
-                    div.item(class="card-body")
+                    div(class="card-body")
                         h5(class="card-title") Name
-                        p(class="card-text") Description: Enter a description for this item
-                    div(class="card-footer")
-                        small(class="text-muted") s
-                        //small(class="text-muted") Quantity
-                        //label Name
-                        //    div Hans
-                        //label Quantity
-                        //    div 12
-                        //label Categories
-                        //
-                        //label Description
-                        //    div
-                        //label Notes
-                        //    div Enter your notes for this item
+                        p(class="card-text")
+                            small(class="text-muted") Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea tak
+
+
+
+                div#accordionPanelsStayOpenExample(class="accordion")
+                    div(class="accordion-item")
+                        h2(class="accordion-header" id="panelsStayOpen-headingOne")
+                            button(class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne") Accordion Item #1
+                    //-
+                    div(id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne")
+                        div(class="accordion-body")
+                            strong This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+
+                    div(class="accordion-item")
+                        h2(class="accordion-header" id="panelsStayOpen-headingTwo")
+                            button(class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo") Accordion Item #2
+                    //-
+                    div(id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingTwo")
+                        div(class="accordion-body")
+                            strong This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+
+                    div(class="accordion-item")
+                        h2(class="accordion-header" id="panelsStayOpen-headingThree")
+                            button(class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree") Accordion Item #3
+                    //-
+                    div(id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingThree")
+                        div(class="accordion-body")
+                            strong This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+
+                //small(class="text-muted") Quantity
+                    //label Name
+                    //    div Hans
+                    //label Quantity
+                    //    div 12
+                    //label Categories
+                    //
+                    //label Description
+                    //    div
+                    //label Notes
+                    //    div Enter your notes for this item
