--- a/views/board/index.pug
+++ b/views/board/index.pug
@@ -2,28 +2,28 @@ extends ../layout
 
 block content
     ul.list-group
-        a(href="view/01")
+        a(href="board/view/01")
             li.list-group-item
                 div.name Abenteuer Schwadronen
                 div.delete(class="btn btn-outline-dark")
                     <span class="material-icons">delete</span>
                 div.edit(class="btn btn-outline-dark")
                     <span class="material-icons">mode_edit</span>
-        a(href="view/02")
+        a(href="board/view/02")
             li.list-group-item
                 div.name Abenteuer Schwadronen
                 div.delete(class="btn btn-outline-dark")
                     <span class="material-icons">delete</span>
                 div.edit(class="btn btn-outline-dark")
                     <span class="material-icons">mode_edit</span>
-        a(href="view/03")
+        a(href="board/view/03")
             li.list-group-item Test
                 div.name Abenteuer Schwadronen
                 div.delete(class="btn btn-outline-dark")
                     <span class="material-icons">delete</span>
                 div.edit(class="btn btn-outline-dark")
                     <span class="material-icons">mode_edit</span>
-        a(href="view/04")
+        a(href="board/view/04")
             li.list-group-item Test
                 div.name Abenteuer Schwadronen
                 div.delete(class="btn btn-outline-dark")
