fixed some small issues

--- a/views/board/index.pug
+++ b/views/board/index.pug
@@ -3,4 +3,4 @@ extends ../layout
 block content
     ul#projects-list.list-group
 
-    script(src="javascripts/board/index.js")
+    script(src="/javascripts/board/index.js")
