--- a/public/stylesheets/view.css
+++ b/public/stylesheets/view.css
@@ -7,7 +7,8 @@
 aside {
     height: 100vh;
     padding: 2rem;
-} .player-list {
+    width: 25rem;
+} #player-list {
     max-height: 100%;
     overflow-y: scroll;
 }
